solved z-index

--- a/examination/client/debug/stylesheet/style.css
+++ b/examination/client/debug/stylesheet/style.css
@@ -137,7 +137,11 @@ img{
 
 .onmousedown{
     opacity: 0.8;
-    z-index: 2;
+    z-index: 10;
+}
+
+.topwindow{
+    z-index: 5;
 }
 
 
